--- a/src/main/resources/assets/omnicrossbow/lang/en_us.json
+++ b/src/main/resources/assets/omnicrossbow/lang/en_us.json
@@ -5,6 +5,8 @@
   "enchantment.omnicrossbow.multichambered.desc": "Lets you load multiple shots by crouching",
   "death.attack.omnicrossbow.beacon": "%s was vaporized by %s",
   "death.attack.omnicrossbow.beacon.item": "%s was vaporized by %s using %s",
-  "subtitles.omnicrossbow.item.beacon.prepare": "Nether star charges up",
-  "subtitles.omnicrossbow.item.beacon.fire": "Nether star blasts"
+  "subtitles.omnicrossbow.projectile.beacon.prepare": "Nether star charges",
+  "subtitles.omnicrossbow.projectile.beacon.fire": "Nether star blasts",
+  "subtitles.omnicrossbow.projectile.sonic.prepare": "Echo shard charges",
+  "subtitles.omnicrossbow.projectile.sonic.fire": "Echo shard booms"
 }
