--- a/src/main/resources/assets/omnicrossbow/lang/en_us.json
+++ b/src/main/resources/assets/omnicrossbow/lang/en_us.json
@@ -9,5 +9,6 @@
   "subtitles.omnicrossbow.projectile.beacon.fire": "Nether star blasts",
   "subtitles.omnicrossbow.projectile.sonic.prepare": "Echo shard charges",
   "subtitles.omnicrossbow.projectile.sonic.fire": "Echo shard booms",
-  "subtitles.omnicrossbow.projectile.endcrystal.hit": "End crystal clangs"
+  "subtitles.omnicrossbow.projectile.endcrystal.hit": "End crystal clangs",
+  "resourcepack.omnicrossbow.enchancement_compat": "Omni Crossbow Enchancement Compat"
 }
