Fix permissions and change death message

--- a/src/main/resources/assets/omnicrossbow/lang/en_us.json
+++ b/src/main/resources/assets/omnicrossbow/lang/en_us.json
@@ -3,8 +3,8 @@
   "enchantment.omnicrossbow.omni.desc": "Lets you load any item into the crossbow",
   "enchantment.omnicrossbow.multichambered": "Multichambered",
   "enchantment.omnicrossbow.multichambered.desc": "Lets you load multiple shots by crouching",
-  "death.attack.omnicrossbow.beacon": "%s was vaporized by %s",
-  "death.attack.omnicrossbow.beacon.item": "%s was vaporized by %s using %s",
+  "death.attack.omnicrossbow.beacon": "%2$s gave %1$s a bad time",
+  "death.attack.omnicrossbow.beacon.item": "%2$s gave %1$s a bad time using %3$s",
   "subtitles.omnicrossbow.projectile.beacon.prepare": "Nether star charges",
   "subtitles.omnicrossbow.projectile.beacon.fire": "Nether star blasts",
   "subtitles.omnicrossbow.projectile.sonic.prepare": "Echo shard charges",
